<resources>

    <!--Login Activity information-->
    <string name="app_name">CyPeers</string>
    <string name="login_username_label">UserName</string>
    <string name="login_password_label">Password</string>
    <string name="login_username_hint">Email address</string>
    <string name="login_password_hint">text Password</string>
    <string name="textview_remember">Remember Me</string>
    <string name="textview_forget_password">Forgot your Username Or Password</string>
    <!--Register Activity information-->
    <string name="register_nickname_label">Nick Nmae</string>
    <string name="register_username_label">User Name</string>
    <string name="register_email_label">Email address</string>
    <string name="register_password_label">Password</string>
    <string name="signup_label">SIGN UP</string>

    <!--Register Activity information show the prompt meesage to user-->
    <string name="register_success_label">"Register Success please go to your email to activate your account!"</string>
    <string name="register_unauthorized_client_label">"Register Fail unauthorized client"</string>
    <string name="register_email_duplicate_label">"Register Fail Email had been register!</string>
    <string name="register_register_fail_label">"Register Fail Unknow error</string>
    <string name="register_params_error_label">"Register Fail parameters error</string>
    <string name="register_user_not_found_label">"Register Fail user not found</string>
    <string name="register_activate_code_not_found_label">"Register Fail activate code not found</string>
    <string name="register_activated_label">"Your account had been activated!"</string>
    <string name="register_Server_fail_label">"Server Internal Error"</string>

    <!--Login Activity information show the prompt meesage to user-->
    <string name="login_success_label">"Welcome!"</string>
    <string name="login_unauthorized_client_label">"Login Fail unauthorized client"</string>
    <string name="login_email_duplicate_label">"Login Fail Email had been register!</string>
    <string name="login_fail_label">"Login Fail Unknow error</string>
    <string name="login_params_error_label">"Login Fail parameters error</string>
    <string name="login_user_not_found_label">"Login Fail user not found</string>
    <string name="login_activate_code_not_found_label">"Login Fail activate code not found</string>
    <string name="login_activated_label">"Your account had been activated!"</string>
    <string name="login_not_activated_label">"Login Fail Your account didn't activate</string>
    <string name="login_offline_label">"Please check your network"</string>


    <!--MainActivity -->
    <string name="add_account_label">"Add Account"</string>
    <string name="menu_loginout">"LoginOut"</string>
    <string name="loginout_message">"Do you really want to Login Out?"</string>
    <string name="loginout_fail">"Login Out fail"</string>
    <string name="loginout_success">"Login Out Successful"</string>

    <string name="tv_add_account">Add Account</string>
    <string name="google_account">gmail</string>
    <string name="wangyi_account">163</string>
    <string name="yahoo_account">yahoo</string>
    <string name="exchange_account">exchange</string>
    <string name="outlook_account">outLook</string>
    <string name="others_account">others</string>

    <string name="account_login">Login in</string>
    <string name="account_login_cancel">Cancel</string>

    <string name="login_gmail_username_hint">UserName</string>


</resources>
