<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegisterbg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/register_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/register_img"
        />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:padding="10dp"
    android:background="@color/colorRegisterbg"
    >

    <EditText
        android:id="@+id/edit_register_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_nickname_label"/>

    <EditText
        android:id="@+id/edit_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_nickname"
        android:hint="@string/register_username_label"/>

    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_username"
        android:hint="@string/register_email_label"/>

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_email"
        android:inputType="textPassword"
        android:hint="@string/register_password_label"/>

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="35dp">
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_label"
            android:textSize="35sp"
            android:textColor="@color/colorSignup_Text"
            android:background="@color/colorSignupBtn"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
